<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFBFB"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sampleQuestion"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <SeekBar
            android:id="@+id/Answer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:max="100"
            android:progress="25"
            android:progressDrawable="@drawable/progress_track"
            android:thumb="@color/grayBackground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/question" />

        <TextView
            android:id="@+id/answerText1"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:paddingStart="32dp"
            android:paddingEnd="0dp"
            android:text="@string/answer1"
            app:layout_constraintEnd_toStartOf="@id/answer1Percentage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/question" />

        <TextView
            android:id="@+id/answer1Percentage"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:paddingStart="0dp"
            android:paddingEnd="32dp"
            android:text="Answer1Percentage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/question" />


        <SeekBar
            android:id="@+id/Answer2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:max="100"
            android:progress="25"
            android:progressDrawable="@drawable/progress_track"
            android:thumb="@color/grayBackground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Answer1" />

        <TextView
            android:id="@+id/answerText2"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:paddingStart="32dp"
            android:paddingEnd="0dp"
            android:text="@string/answer2"
            app:layout_constraintEnd_toStartOf="@id/answer2Percentage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Answer1" />

        <TextView
            android:id="@+id/answer2Percentage"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:paddingStart="0dp"
            android:paddingEnd="32dp"
            android:text="Answer2Percentage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Answer1" />

        <SeekBar
            android:id="@+id/Answer3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:max="100"
            android:progress="25"
            android:progressDrawable="@drawable/progress_track"
            android:thumb="@color/grayBackground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Answer2" />

        <TextView
            android:id="@+id/answerText3"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:paddingStart="32dp"
            android:paddingEnd="0dp"
            android:text="@string/answer3"
            app:layout_constraintEnd_toStartOf="@id/answer3Percentage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Answer2" />

        <TextView
            android:id="@+id/answer3Percentage"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:paddingStart="0dp"
            android:paddingEnd="32dp"
            android:text="Answer3Percentage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Answer2" />


        <SeekBar
            android:id="@+id/Answer4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:max="100"
            android:progress="25"
            android:progressDrawable="@drawable/progress_track"
            android:thumb="@color/grayBackground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Answer3" />

        <TextView
            android:id="@+id/answerText4"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:paddingStart="32dp"
            android:paddingEnd="0dp"
            android:text="@string/answer4"
            app:layout_constraintEnd_toStartOf="@id/answer4Percentage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Answer3" />

        <TextView
            android:id="@+id/answer4Percentage"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:paddingStart="0dp"
            android:paddingEnd="32dp"
            android:text="Answer4Percentage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Answer3" />


        <TextView
            android:id="@+id/deleteQuestion"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/delete_btn"
            android:gravity="center"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:text="@string/delete"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.583"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Answer4"
            app:layout_constraintVertical_bias="0.478" />

        <View
            android:id="@+id/divider"
            android:layout_width="350dp"
            android:layout_height="1dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="5dp"
            android:background="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/deleteQuestion"
            app:layout_constraintVertical_bias="0.238" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
